--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ li button {
 }
 
 .navb {
-    box-shadow: 0px  1px 3px rgba(128, 128, 128, 0.453);
+    box-shadow: 0px 1px 3px rgba(128, 128, 128, 0.453);
     margin: auto;
     padding-top: 10px;
     padding-bottom: 1px;
@@ -164,15 +164,15 @@ li button {
     margin: 25px auto 25px auto;
 }
 
-.carousel img{
+.carousel img {
     border-radius: 4px;
 }
 
-.category{
+.category {
     margin: 38px 0 0 38px;
 }
 
-.categories{
+.categories {
     margin: 35px 0 0 48px;
     font-size: 23px;
     font-weight: 700;
@@ -183,23 +183,23 @@ li button {
 
 }
 
-.container .category{
+.container .category {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
 }
 
-.category{
+.category {
     display: flex;
-    flex-wrap: wrap;    
+    flex-wrap: wrap;
     flex-direction: row;
 }
 
-.category div img{
+.category div img {
     height: 90px;
 }
 
-.category div{
+.category div {
     margin: -10px 30px 60px 20px;
     text-align: center;
     justify-content: center;
@@ -207,19 +207,19 @@ li button {
 
 }
 
-.category div h1{
+.category div h1 {
     font-size: 15px;
     font-weight: bold;
     text-align: center;
     width: 90px;
 }
 
-.card-section h3{
+.card-section h3 {
     font-weight: bold;
     font-size: 25px;
 }
 
-.card{
+.card {
     border: 1px solid rgb(215, 215, 215);
     width: 262px;
     margin-right: 20px;
@@ -227,60 +227,95 @@ li button {
     box-shadow: 5px 5px 5px rgba(150, 150, 150, 0.637);
 }
 
-.card:hover{
-    background-color: #fbfbfb;
+.card:hover {
+    background-color: #ffffff;
+    box-shadow: none;
+    border: none;
 }
 
-.card img{
+.card img {
     width: 260px;
     height: 150px;
     margin-left: -12px;
 }
 
-.card .text{
+.card .text {
     margin: 8px;
 }
 
-.card .text p{
+.card .text p {
     font-size: 13px;
 }
 
-.text i{
+.text i {
     color: red;
 }
 
-.footer h1{
+.footer h1 {
     font-size: 12px;
     font-weight: bold;
     text-align: left;
 }
 
-.footer .div{
+.footer .div {
     margin-top: 26px;
     margin-right: 30px;
 }
 
-.footer ul li{
+.footer ul li {
     list-style: none;
 }
-.footer ul li a{
+
+.footer ul li a {
     text-decoration: none;
     color: #838383;
     font-size: 14px;
 }
 
-.footer .div{
+.footer .div {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     float: left;
 }
 
-.fcontent{
-    background-color: #000000;
+.div .icon{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-top: 20px;
+    margin-left: -99px;
 }
 
-.footer .img{
+.icon li{
+    border-radius: 100%;
+    border: 2px solid gray;
+    padding: 3px 10px;
+    margin-right: 5px;
+
+} 
+
+.footer .img {
     background-color: #F8FAF9;
+    width: 96vw;
+    margin: auto;
 }
 
+.footer .imga {
+    margin-left: 200px;
+}
+
+.bord {
+    margin: 60px auto 0px -40px;
+    border: none;
+}
+
+.bord h6 {
+    margin-bottom: 25px;
+}
+
+.vl {
+    border-left: 2px solid rgb(186, 186, 186);
+    height: 150px;
+    margin-top: 25px;
+}
